k8v/deployment-dev.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rk-data
  labels:
    app: rk-data
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rk-data
  template:
    metadata:
      labels:
        app: rk-data
    spec:
      containers:
      - name: rk-data
        image: antonybaasan/receiptkeeper-data:latest
        ports:
        - containerPort: 80
      imagePullSecrets:
      - name: registrycred
