k8v/service-dev.yaml
apiVersion: v1
kind: Service
metadata:
  name: receiptkeeper-data
  labels:
    run: receiptkeeper-data
spec:
  ports:
  - port: 80
    protocol: TCP
  selector:
    run: receiptkeeper-data
